[gd_scene load_steps=20 format=3 uid="uid://ndq7jelautjm"]

[ext_resource type="Script" uid="uid://bnccbmw0h0e0m" path="res://Scripts/Core.gd" id="1_ca1vv"]
[ext_resource type="Texture2D" uid="uid://dj1qim4l1lfiv" path="res://Sprites/MC/ENERGY_CORE.png" id="1_jdxe4"]
[ext_resource type="Shader" uid="uid://cie8slgga3ka4" path="res://Shaders/Flashing.gdshader" id="1_xe0ao"]
[ext_resource type="Script" uid="uid://b77gjl2tgehoa" path="res://Scripts/BOOM.gd" id="3_2k8qt"]
[ext_resource type="Texture2D" uid="uid://cupmmk726tpvr" path="res://Sprites/boom.png" id="3_wl83l"]
[ext_resource type="AudioStream" uid="uid://8b1p6qceamr4" path="res://Sounds/MC/CORExplosion.wav" id="5_0s4uu"]
[ext_resource type="Texture2D" uid="uid://b3puehcb3tf05" path="res://Sprites/MC/CoreExplosion.png" id="5_48f2i"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_obrod"]
shader = ExtResource("1_xe0ao")
shader_parameter/Flashing = false
shader_parameter/White = false

[sub_resource type="CircleShape2D" id="CircleShape2D_ca1vv"]
radius = 6.0

[sub_resource type="CircleShape2D" id="CircleShape2D_2k8qt"]
radius = 6.0

[sub_resource type="CircleShape2D" id="CircleShape2D_adac1"]
radius = 65.03076

[sub_resource type="AtlasTexture" id="AtlasTexture_xe0ao"]
atlas = ExtResource("5_48f2i")
region = Rect2(0, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_obrod"]
atlas = ExtResource("5_48f2i")
region = Rect2(128, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_ihbvh"]
atlas = ExtResource("5_48f2i")
region = Rect2(256, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_jhwns"]
atlas = ExtResource("5_48f2i")
region = Rect2(0, 128, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_76qgk"]
atlas = ExtResource("5_48f2i")
region = Rect2(128, 128, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_2dcah"]
atlas = ExtResource("5_48f2i")
region = Rect2(256, 128, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_fe5mp"]
atlas = ExtResource("5_48f2i")
region = Rect2(0, 256, 128, 128)

[sub_resource type="SpriteFrames" id="SpriteFrames_68po0"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_xe0ao")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_obrod")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ihbvh")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_jhwns")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_76qgk")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2dcah")
}, {
"duration": 3.0,
"texture": SubResource("AtlasTexture_fe5mp")
}],
"loop": false,
"name": &"default",
"speed": 32.0
}]

[node name="Node2D" type="Node2D"]

[node name="Core" type="RigidBody2D" parent="."]
texture_filter = 1
material = SubResource("ShaderMaterial_obrod")
position = Vector2(1, 1)
collision_layer = 16
collision_mask = 30
script = ExtResource("1_ca1vv")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Core"]
shape = SubResource("CircleShape2D_ca1vv")

[node name="EnergyCore" type="Sprite2D" parent="Core/CollisionShape2D"]
texture_filter = 1
texture = ExtResource("1_jdxe4")

[node name="Area2D2" type="Area2D" parent="Core"]
visible = false
collision_layer = 16
collision_mask = 6

[node name="CollisionShape2D2" type="CollisionShape2D" parent="Core/Area2D2"]
shape = SubResource("CircleShape2D_2k8qt")

[node name="Area2D" type="Area2D" parent="."]
visible = false
position = Vector2(1, 1)
collision_layer = 16
collision_mask = 519
monitoring = false
script = ExtResource("3_2k8qt")

[node name="CollisionShape2D2" type="CollisionShape2D" parent="Area2D"]
shape = SubResource("CircleShape2D_adac1")

[node name="Boom" type="Sprite2D" parent="Area2D/CollisionShape2D2"]
visible = false
texture_filter = 1
scale = Vector2(2, 2)
texture = ExtResource("3_wl83l")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="Area2D/CollisionShape2D2"]
texture_filter = 1
sprite_frames = SubResource("SpriteFrames_68po0")

[node name="CorExplosion" type="AudioStreamPlayer2D" parent="Area2D"]
position = Vector2(-1, -1)
stream = ExtResource("5_0s4uu")
volume_db = 8.0
bus = &"SFX"

[node name="RayCast2D" type="RayCast2D" parent="."]
position = Vector2(1, 1)
collision_mask = 6

[connection signal="body_entered" from="Core/Area2D2" to="Core" method="_on_area_2d_2_body_entered"]
[connection signal="body_entered" from="Area2D" to="Area2D" method="_on_body_entered"]
[connection signal="animation_finished" from="Area2D/CollisionShape2D2/AnimatedSprite2D" to="Area2D" method="_on_animated_sprite_2d_animation_finished"]
